fix bug overflow

--- a/css/style.css
+++ b/css/style.css
@@ -21,4 +21,6 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    overflow: auto;
   }
